--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recall>
+        <link rel="stylesheet" href="./index.css">
   </head>
   <body></body>
 </html>
