--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recall>
-        <link rel="stylesheet" href="./index.css">
+    <title>Recall></title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body></body>
 </html>
