--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <title>Recall></title>
     <link rel="stylesheet" href="./index.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="Wrapper"></div>
+    </header>
+  </body>
 </html>
