--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="Wrapper">
-        <a href="">recall</a>
+        <a class="logo" href="#">recall</a>
       </div>
     </header>
   </body>
