--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header>
       <div class="Wrapper">
         <a class="logo" href="#">recall</a>
+        <nav>
+          <ul>
+            <li><a class="active" href="#"></a></li>
+          </ul>
+        </nav>
       </div>
     </header>
   </body>
