--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <a class="logo" href="#">recall</a>
         <nav>
           <ul>
-            <li><a class="active" href="#"></a></li>
+            <li><a class="active" href="#">home</a></li>
+            <li><a href="#">features</a></li>
           </ul>
         </nav>
       </div>
