--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <ul>
             <li><a class="active" href="#">home</a></li>
             <li><a href="#">features</a></li>
+            <li><a href="#">support</a></li>
           </ul>
         </nav>
       </div>
