--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="#">support</a></li>
           </ul>
         </nav>
+        <a class="header-act" href="#">download recall</a>
       </div>
     </header>
   </body>
