--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
         <a class="header-act" href="#">download recall</a>
       </div>
     </header>
+
+    <section></section>
   </body>
 </html>
