--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       </div>
     </header>
 
-    <section></section>
+    <section>
+      <div class="wrapper"></div>
+    </section>
   </body>
 </html>
