--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     </header>
 
     <section>
-      <div class="wrapper"></div>
+      <div class="wrapper">
+        <div class="lift-col"></div>
+      </div>
     </section>
   </body>
 </html>
