--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <section>
       <div class="wrapper">
         <div class="lift-col"></div>
+        <div class="right-col"></div>
       </div>
     </section>
   </body>
