--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <section>
       <div class="wrapper">
         <div class="lift-col"></div>
-        <div class="right-col"></div>
+        <div class="right-col">
+          <img class="phone" src="./asset/phone.svg" alt="phone" />
+        </div>
       </div>
     </section>
   </body>
