--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <section>
       <div class="wrapper">
-        <div class="lift-col"></div>
+        <div class="lift-col">
+          <h1>Recording scammershas never been easier</h1>
+        </div>
         <div class="right-col">
           <img class="phone" src="./asset/phone.svg" alt="phone" />
         </div>
