--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="wrapper">
         <div class="lift-col">
           <h1>Recording scammershas never been easier</h1>
+          <p>Simply answer, click record, and the rest is history.</p>
         </div>
         <div class="right-col">
           <img class="phone" src="./asset/phone.svg" alt="phone" />
