--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         <div class="lift-col">
           <h1>Recording scammershas never been easier</h1>
           <p>Simply answer, click record, and the rest is history.</p>
-          <div></div>
+          <div>
+            <a class="googleplay" href=""
+              ><img src="./asset/googleplay.svg" alt="googleplay"
+            /></a>
+          </div>
         </div>
         <div class="right-col">
           <img class="phone" src="./asset/phone.svg" alt="phone" />
