--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
           <h1>Recording scammershas never been easier</h1>
           <p>Simply answer, click record, and the rest is history.</p>
           <div>
-            <a class="googleplay" href=""
-              ><img src="./asset/googleplay.svg" alt="googleplay"
+            <a class="gplay" href="#"
+              ><img src="./asset/googleplay.svg" alt="google play"
+            /></a>
+            <a class="appstore" href="#"
+              ><img src="./asset/appstore.svg" alt="google play"
             /></a>
           </div>
         </div>
