--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
         </div>
       </div>
     </section>
-    <section></section>
+    <section class="features"></section>
   </body>
 </html>
