--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         </div>
       </div>
     </section>
-    <section class="features"></section>
+    <section class="features">
+      <div class="wrapper"></div>
+    </section>
   </body>
 </html>
