--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       </div>
     </section>
     <section class="features">
-      <div class="wrapper"></div>
+      <div class="wrapper">
+        <ul></ul>
+      </div>
     </section>
   </body>
 </html>
