--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <section class="features">
       <div class="wrapper">
         <ul>
-          <li></li>
+          <li>
+            <strong> </strong>
+          </li>
         </ul>
       </div>
     </section>
