--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
           <li>
             <strong>
               <svg
-                width="35"
-                height="35"
                 viewBox="0 0 35 35"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
@@ -63,6 +61,7 @@
                   fill="white"
                 />
               </svg>
+              <span>Secure</span>
             </strong>
           </li>
         </ul>
