--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
               </svg>
               <span>Secure</span>
             </strong>
+            <span>Secure
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum eget suspendisse metus lacus vel massa suspendisse aliquam nisi.</p>
           </li>
         </ul>
       </div>
