--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
       </div>
     </section>
     <div class="wrapper">
-      
+      <section
+      class="testimonian"></section>
     </div>
   </body>
 </html>
