--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
       </div>
     </section>
     <div class="wrapper">
-      <section
-      class="testimonian"></section>
+      <section class="testimonian">
+        <div class="testimonian-qoute"></div>
+      </section>
     </div>
   </body>
 </html>
