--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
       <section class="testimonian">
         <div class="testimonian-qoute">
           <h1>I kept getting scam calls, but now I record them with confidence.</h1>
+          <p>That was amazing! I loved the pancakes. I’ve never had that type of taste hit my mouth before. Unreal!</p>
         </div>
       </section>
     </div>
