--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <p>That was amazing! I loved the pancakes. I’ve never had that type of taste hit my mouth before. Unreal!</p>
         </div>
         <div class="testimonian-info">
-          
+          <img src="./asset/person.jpg" alt="person">
         </div>
       </section>
     </div>
