--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         </div>
         <div class="testimonian-info">
           <img src="./asset/person.jpg" alt="person">
+          <div class="author"></div>
         </div>
       </section>
     </div>
