--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
         </div>
         <div class="testimonian-info">
           <img src="./asset/person.jpg" alt="person">
-          <div class="author"></div>
+          <div class="author">
+            <strong></strong>
+          </div>
         </div>
       </section>
     </div>
