--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
         <div class="testimonian-info">
           <img src="./asset/person.jpg" alt="person">
           <div class="author">
-            <strong></strong>
+            <strong>Jane Doe</strong>
+            <a href="#">https://somecompanyllc.co</a>
           </div>
         </div>
       </section>
