--- a/index.html
+++ b/index.html
@@ -149,5 +149,11 @@
         </div>
       </section>
     </div>
+    <footer>
+      <div class="wrapper">
+        <div class="footer-header"></div>
+      </div>
+    </footer>
+
   </body>
 </html>
