--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
     </div>
     <footer>
       <div class="wrapper">
-        <div class="footer-header"></div>
+        <div class="footer-header">
+          <a class="logo" href="#">recall</a>
+        </div>
       </div>
     </footer>
 
