--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
       <div class="wrapper">
         <div class="footer-header">
           <a class="logo" href="#">recall</a>
+          <nav class="footer-nav">
+
+          </nav>
         </div>
       </div>
     </footer>
