--- a/index.html
+++ b/index.html
@@ -154,7 +154,11 @@
         <div class="footer-header">
           <a class="logo" href="#">recall</a>
           <nav class="footer-nav">
-
+            <ul>
+              <li><a class="active" href="#">home</a></li>
+              <li><a href="#">features</a></li>
+              <li><a href="#">support</a></li>
+            </ul>
           </nav>
         </div>
       </div>
