--- a/index.html
+++ b/index.html
@@ -161,7 +161,14 @@
             </ul>
           </nav>
         </div>
-        <div class="cta-btns"></div>
+        <div class="cta-btns">
+          <a class="gplay" href="#"
+          ><img src="./asset/googleplay.svg" alt="google play"
+        /></a>
+        <a class="appstore" href="#"
+          ><img src="./asset/appstore.svg" alt="google play"
+        /></a>
+        </div>
       </div>
     </footer>
 
