--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
           ><img src="./asset/appstore.svg" alt="google play"
         /></a>
         </div>
+        <nav class="second-nav">
+
+        </nav>
       </div>
     </footer>
 
