--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
         /></a>
         </div>
         <nav class="second-nav">
-
+          <ul>
+            <li><a href="#">  erms of Service</a></li>
+          </ul>
         </nav>
       </div>
     </footer>
