--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <nav class="second-nav">
           <ul>
-            <li><a href="#">erms of Service</a></li>
+            <li><a href="#">Terms of Service</a></li>
             <li><a href="#">privacy policy</a></li>
           </ul>
         </nav>
