--- a/index.html
+++ b/index.html
@@ -63,8 +63,38 @@
               </svg>
               <span>Secure</span>
             </strong>
-            <span>Secure
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum eget suspendisse metus lacus vel massa suspendisse aliquam nisi.</p>
+            <span>Secure</span>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum
+              eget suspendisse metus lacus vel massa suspendisse aliquam nisi.
+            </p>
+          </li>
+
+          <li>
+            <strong>
+              <svg
+                viewBox="0 0 35 35"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M15.3125 23.3333C15.3125 22.1252 16.2919 21.1458 17.5 21.1458C18.7081 21.1458 19.6875 22.1252 19.6875 23.3333C19.6875 24.5415 18.7081 25.5208 17.5 25.5208C16.2919 25.5208 15.3125 24.5415 15.3125 23.3333Z"
+                  fill="white"
+                />
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M11.1149 15.4542L10.6549 11.314C10.5959 10.7832 10.5959 10.2475 10.6549 9.71671L10.6881 9.4179C11.0403 6.24837 13.532 3.74054 16.6992 3.36793C17.2312 3.30534 17.7687 3.30534 18.3008 3.36793C21.468 3.74054 23.9597 6.24838 24.3118 9.4179L24.345 9.71671C24.404 10.2475 24.404 10.7832 24.345 11.314L23.885 15.4542L24.8863 15.5341C26.4653 15.6602 27.7546 16.8471 28.0106 18.4103C28.5444 21.6706 28.5444 24.9961 28.0106 28.2564C27.7546 29.8196 26.4653 31.0065 24.8863 31.1326L22.7045 31.3068C19.2404 31.5833 15.7597 31.5833 12.2956 31.3068L10.1138 31.1326C8.53478 31.0065 7.24546 29.8196 6.9895 28.2564C6.45565 24.9961 6.45565 21.6706 6.9895 18.4103C7.24546 16.8471 8.53478 15.6602 10.1138 15.5341L11.1149 15.4542ZM16.9547 5.54045C17.317 5.49783 17.683 5.49783 18.0452 5.54045C20.2015 5.79413 21.8979 7.50155 22.1377 9.65947L22.1709 9.95828C22.2121 10.3285 22.2121 10.7022 22.1709 11.0724L21.7026 15.2877C18.9037 15.1075 16.0962 15.1075 13.2974 15.2877L12.829 11.0724C12.7879 10.7022 12.7879 10.3285 12.829 9.95828L12.8622 9.65947C13.102 7.50155 14.7984 5.79413 16.9547 5.54045ZM22.5304 17.5405C19.1821 17.2732 15.8179 17.2732 12.4697 17.5405L10.2878 17.7147C9.7119 17.7607 9.24162 18.1936 9.14825 18.7638C8.65273 21.79 8.65273 24.8767 9.14825 27.9029C9.24162 28.4731 9.7119 28.906 10.2878 28.952L12.4697 29.1262C15.8179 29.3935 19.1821 29.3935 22.5304 29.1262L24.7122 28.952C25.2882 28.906 25.7585 28.4731 25.8518 27.9029C26.3473 24.8767 26.3473 21.79 25.8518 18.7638C25.7585 18.1936 25.2882 17.7607 24.7122 17.7147L22.5304 17.5405Z"
+                  fill="white"
+                />
+              </svg>
+              <span>Secure</span>
+            </strong>
+            <span>Secure</span>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum
+              eget suspendisse metus lacus vel massa suspendisse aliquam nisi.
+            </p>
           </li>
           <li>
             <strong>
@@ -86,31 +116,11 @@
               </svg>
               <span>Secure</span>
             </strong>
-            <span>Secure
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum eget suspendisse metus lacus vel massa suspendisse aliquam nisi.</p>
-          </li>
-          <li>
-            <strong>
-              <svg
-                viewBox="0 0 35 35"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M15.3125 23.3333C15.3125 22.1252 16.2919 21.1458 17.5 21.1458C18.7081 21.1458 19.6875 22.1252 19.6875 23.3333C19.6875 24.5415 18.7081 25.5208 17.5 25.5208C16.2919 25.5208 15.3125 24.5415 15.3125 23.3333Z"
-                  fill="white"
-                />
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M11.1149 15.4542L10.6549 11.314C10.5959 10.7832 10.5959 10.2475 10.6549 9.71671L10.6881 9.4179C11.0403 6.24837 13.532 3.74054 16.6992 3.36793C17.2312 3.30534 17.7687 3.30534 18.3008 3.36793C21.468 3.74054 23.9597 6.24838 24.3118 9.4179L24.345 9.71671C24.404 10.2475 24.404 10.7832 24.345 11.314L23.885 15.4542L24.8863 15.5341C26.4653 15.6602 27.7546 16.8471 28.0106 18.4103C28.5444 21.6706 28.5444 24.9961 28.0106 28.2564C27.7546 29.8196 26.4653 31.0065 24.8863 31.1326L22.7045 31.3068C19.2404 31.5833 15.7597 31.5833 12.2956 31.3068L10.1138 31.1326C8.53478 31.0065 7.24546 29.8196 6.9895 28.2564C6.45565 24.9961 6.45565 21.6706 6.9895 18.4103C7.24546 16.8471 8.53478 15.6602 10.1138 15.5341L11.1149 15.4542ZM16.9547 5.54045C17.317 5.49783 17.683 5.49783 18.0452 5.54045C20.2015 5.79413 21.8979 7.50155 22.1377 9.65947L22.1709 9.95828C22.2121 10.3285 22.2121 10.7022 22.1709 11.0724L21.7026 15.2877C18.9037 15.1075 16.0962 15.1075 13.2974 15.2877L12.829 11.0724C12.7879 10.7022 12.7879 10.3285 12.829 9.95828L12.8622 9.65947C13.102 7.50155 14.7984 5.79413 16.9547 5.54045ZM22.5304 17.5405C19.1821 17.2732 15.8179 17.2732 12.4697 17.5405L10.2878 17.7147C9.7119 17.7607 9.24162 18.1936 9.14825 18.7638C8.65273 21.79 8.65273 24.8767 9.14825 27.9029C9.24162 28.4731 9.7119 28.906 10.2878 28.952L12.4697 29.1262C15.8179 29.3935 19.1821 29.3935 22.5304 29.1262L24.7122 28.952C25.2882 28.906 25.7585 28.4731 25.8518 27.9029C26.3473 24.8767 26.3473 21.79 25.8518 18.7638C25.7585 18.1936 25.2882 17.7607 24.7122 17.7147L22.5304 17.5405Z"
-                  fill="white"
-                />
-              </svg>
-              <span>Secure</span>
-            </strong>
-            <span>Secure
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum eget suspendisse metus lacus vel massa suspendisse aliquam nisi.</p>
+            <span>Secure</span>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum
+              eget suspendisse metus lacus vel massa suspendisse aliquam nisi.
+            </p>
           </li>
         </ul>
       </div>
@@ -118,30 +128,58 @@
     <div class="wrapper">
       <section class="testimonian">
         <div class="testimonian-qoute">
-          <h1>I kept getting scam calls, but now I record them with confidence.</h1>
-          <p>That was amazing! I loved the pancakes. I’ve never had that type of taste hit my mouth before. Unreal!</p>
+          <h1>
+            I kept getting scam calls, but now I record them with confidence.
+          </h1>
+          <p>
+            That was amazing! I loved the pancakes. I’ve never had that type of
+            taste hit my mouth before. Unreal!
+          </p>
         </div>
         <div class="testimonian-info">
-          <img src="./asset/person.jpg" alt="person">
+          <img src="./asset/person.jpg" alt="person" />
           <div class="author">
-
             <strong>Jane Doe</strong>
             <a href="#">https://somecompanyllc.co</a>
             <ul>
               <li>
                 <a href="#">
-                  <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M8.43344 10.4235H2.08963C1.213 10.4235 0.496826 9.70728 0.496826 8.83065V2.48684C0.496826 1.61022 1.213 0.894043 2.08963 0.894043H8.43344C9.31006 0.894043 10.0262 1.61022 10.0262 2.48684V8.83065C10.0262 9.71119 9.31398 10.4235 8.43344 10.4235Z" fill="white"/>
-                    <path d="M5.26357 8.10649C4.61002 8.10649 3.99559 7.85212 3.5338 7.39032C3.072 6.92853 2.81763 6.3141 2.81763 5.66055C2.81763 5.00699 3.072 4.39257 3.5338 3.93077C3.99559 3.46898 4.61002 3.2146 5.26357 3.2146C5.91713 3.2146 6.53155 3.46898 6.99335 3.93077C7.45514 4.39257 7.70952 5.00699 7.70952 5.66055C7.70952 6.3141 7.45514 6.92853 6.99335 7.39032C6.52764 7.85212 5.91713 8.10649 5.26357 8.10649ZM5.26357 3.7351C4.20301 3.7351 3.33812 4.59607 3.33812 5.66055C3.33812 6.72111 4.1991 7.586 5.26357 7.586C6.32414 7.586 7.18902 6.72502 7.18902 5.66055C7.18511 4.59998 6.32414 3.7351 5.26357 3.7351Z" fill="black"/>
-                    <path d="M8.18619 3.13446C8.44556 3.13446 8.65582 2.9242 8.65582 2.66482C8.65582 2.40545 8.44556 2.19519 8.18619 2.19519C7.92681 2.19519 7.71655 2.40545 7.71655 2.66482C7.71655 2.9242 7.92681 3.13446 8.18619 3.13446Z" fill="black"/>
-                    </svg>
+                  <svg
+                    width="11"
+                    height="11"
+                    viewBox="0 0 11 11"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8.43344 10.4235H2.08963C1.213 10.4235 0.496826 9.70728 0.496826 8.83065V2.48684C0.496826 1.61022 1.213 0.894043 2.08963 0.894043H8.43344C9.31006 0.894043 10.0262 1.61022 10.0262 2.48684V8.83065C10.0262 9.71119 9.31398 10.4235 8.43344 10.4235Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M5.26357 8.10649C4.61002 8.10649 3.99559 7.85212 3.5338 7.39032C3.072 6.92853 2.81763 6.3141 2.81763 5.66055C2.81763 5.00699 3.072 4.39257 3.5338 3.93077C3.99559 3.46898 4.61002 3.2146 5.26357 3.2146C5.91713 3.2146 6.53155 3.46898 6.99335 3.93077C7.45514 4.39257 7.70952 5.00699 7.70952 5.66055C7.70952 6.3141 7.45514 6.92853 6.99335 7.39032C6.52764 7.85212 5.91713 8.10649 5.26357 8.10649ZM5.26357 3.7351C4.20301 3.7351 3.33812 4.59607 3.33812 5.66055C3.33812 6.72111 4.1991 7.586 5.26357 7.586C6.32414 7.586 7.18902 6.72502 7.18902 5.66055C7.18511 4.59998 6.32414 3.7351 5.26357 3.7351Z"
+                      fill="black"
+                    />
+                    <path
+                      d="M8.18619 3.13446C8.44556 3.13446 8.65582 2.9242 8.65582 2.66482C8.65582 2.40545 8.44556 2.19519 8.18619 2.19519C7.92681 2.19519 7.71655 2.40545 7.71655 2.66482C7.71655 2.9242 7.92681 3.13446 8.18619 3.13446Z"
+                      fill="black"
+                    />
+                  </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <svg width="10" height="9" viewBox="0 0 10 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 7.71004C1.07642 7.77251 2.01771 7.513 2.93569 6.82577C2.00839 6.66237 1.36533 6.22505 1.01585 5.32156C1.28612 5.28311 1.52377 5.3552 1.80336 5.23986C0.890031 4.82656 0.29823 4.20661 0.274931 3.13492C0.563841 3.15895 0.782855 3.35598 1.12768 3.32715C0.288913 2.48133 0.0326188 1.55861 0.55918 0.438862C1.43523 1.47692 2.4604 2.18337 3.71389 2.51497C3.78379 2.53419 3.84902 2.55341 3.91892 2.56783C4.24045 2.64472 4.62256 2.80812 4.81827 2.78409C5.15378 2.74084 4.81827 2.34196 4.90215 1.82293C5.16776 0.208184 6.89189 -0.527104 8.16869 0.419639C8.54148 0.698376 8.83504 0.69357 9.20317 0.525367C9.39422 0.438862 9.58994 0.352358 9.81827 0.251436C9.76701 0.712793 9.42218 0.9675 9.14725 1.30871C9.45946 1.3808 9.71109 1.28949 10 1.19337C9.90214 1.52497 9.65983 1.7124 9.44082 1.89502C9.21249 2.08245 9.12395 2.27948 9.11463 2.58706C8.97484 7.24388 3.84437 10.8434 0.335511 7.97916C-0.00465643 7.70043 0.326188 7.97916 0 7.71004Z" fill="white"/>
-                    </svg>
+                  <svg
+                    width="10"
+                    height="9"
+                    viewBox="0 0 10 9"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M0 7.71004C1.07642 7.77251 2.01771 7.513 2.93569 6.82577C2.00839 6.66237 1.36533 6.22505 1.01585 5.32156C1.28612 5.28311 1.52377 5.3552 1.80336 5.23986C0.890031 4.82656 0.29823 4.20661 0.274931 3.13492C0.563841 3.15895 0.782855 3.35598 1.12768 3.32715C0.288913 2.48133 0.0326188 1.55861 0.55918 0.438862C1.43523 1.47692 2.4604 2.18337 3.71389 2.51497C3.78379 2.53419 3.84902 2.55341 3.91892 2.56783C4.24045 2.64472 4.62256 2.80812 4.81827 2.78409C5.15378 2.74084 4.81827 2.34196 4.90215 1.82293C5.16776 0.208184 6.89189 -0.527104 8.16869 0.419639C8.54148 0.698376 8.83504 0.69357 9.20317 0.525367C9.39422 0.438862 9.58994 0.352358 9.81827 0.251436C9.76701 0.712793 9.42218 0.9675 9.14725 1.30871C9.45946 1.3808 9.71109 1.28949 10 1.19337C9.90214 1.52497 9.65983 1.7124 9.44082 1.89502C9.21249 2.08245 9.12395 2.27948 9.11463 2.58706C8.97484 7.24388 3.84437 10.8434 0.335511 7.97916C-0.00465643 7.70043 0.326188 7.97916 0 7.71004Z"
+                      fill="white"
+                    />
+                  </svg>
                 </a>
               </li>
             </ul>
@@ -163,11 +201,11 @@
         </div>
         <div class="cta-btns">
           <a class="gplay" href="#"
-          ><img src="./asset/googleplay.svg" alt="google play"
-        /></a>
-        <a class="appstore" href="#"
-          ><img src="./asset/appstore.svg" alt="google play"
-        /></a>
+            ><img src="./asset/googleplay.svg" alt="google play"
+          /></a>
+          <a class="appstore" href="#"
+            ><img src="./asset/appstore.svg" alt="google play"
+          /></a>
         </div>
         <nav class="second-nav">
           <ul>
@@ -177,6 +215,5 @@
         </nav>
       </div>
     </footer>
-
   </body>
 </html>
