--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="Wrapper navbar">
+      <div class="wrapper navbar">
         <a class="logo" href="#">recall</a>
         <nav>
           <ul>
