--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <section>
+    <section class="hero">
       <div class="wrapper">
         <div class="lift-col">
           <h1>Recording scammershas never been easier</h1>
