--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       <div class="wrapper">
         <div class="lift-col">
           <h1>Recording scammershas never been easier</h1>
-          <p>Simply answer, click record, and the rest is history.</p>
+          <p class="subhead">
+            Simply answer, click record, and the rest is history.
+          </p>
           <div>
             <a class="gplay" href="#"
               ><img src="./asset/googleplay.svg" alt="google play"
