--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <p class="subhead">
             Simply answer, click record, and the rest is history.
           </p>
-          <div>
+          <div class="cta-btns">
             <a class="gplay" href="#"
               ><img src="./asset/googleplay.svg" alt="google play"
             /></a>
