--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </p>
         </div>
         <div class="testimonian-info">
-          <img src="./asset/person.jpg" alt="person" />
+          <img class="author-pic" src="./asset/person.jpg" alt="person" />
           <div class="author">
             <strong>Jane Doe</strong>
             <a href="#">https://somecompanyllc.co</a>
