--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div class="author">
             <strong>Jane Doe</strong>
             <a href="#">https://somecompanyllc.co</a>
-            <ul>
+            <ul class="social-nav">
               <li>
                 <a href="#">
                   <svg
