--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             ><img src="./asset/appstore.svg" alt="google play"
           /></a>
         </div>
-        <nav class="second-nav">
+        <nav class="secondary-nav">
           <ul>
             <li><a href="#">Terms of Service</a></li>
             <li><a href="#">privacy policy</a></li>
