--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             taste hit my mouth before. Unreal!
           </p>
         </div>
-        <div class="testimonian-info">
+        <div class="testimonial-info">
           <img class="author-pic" src="./asset/person.jpg" alt="person" />
           <div class="author">
             <strong>Jane Doe</strong>
