--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
         <div class="testimonial-info">
           <img class="author-pic" src="./asset/person.jpg" alt="person" />
           <div class="author">
-            <strong>Jane Doe</strong>
-            <a href="#">https://somecompanyllc.co</a>
+            <div>
+              <strong>Jane Doe</strong>
+              <a href="#">https://somecompanyllc.co</a>
+            </div>
             <ul class="social-nav">
               <li>
                 <a href="#">
