--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       </div>
     </section>
     <div class="wrapper">
-      <section class="testimonian">
-        <div class="testimonian-qoute">
+      <section class="testimonial">
+        <div class="testimonial-qoute">
           <h1>
             I kept getting scam calls, but now I record them with confidence.
           </h1>
